--- a/index.html
+++ b/index.html
@@ -19,24 +19,19 @@
 	<body>
 		<header>
 			<div class="container">
-				<nav class="navbar navbar-inverse navbar-fixed-top">
-					<div class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">Home</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</div>
-					</div>
+				<nav class="pushy pushy-right">
+					<ul>
+						<li class="pushy-link"><a href="#about">About</a></li>
+						<li class="pushy-link"><a href="#portfolio">Portfolio</a></li>
+						<li class="pushy-link"><a href="#portfolio">Portfolio</a></li>
+						<li class="pushy-link"><a href="#contact">Contact</a></li>
+					</ul>
 				</nav>
+    		<div class="menu-btn">
+    			<i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+    		</div>
+			<div class="site-overlay"></div>
+			</div>
 			<div class="container">
 				<div class="row">
 					<div class="header-slogan col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -52,12 +47,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-offset-5 col-lg-7 col-md-offset-5 col-md-5 col-sm-12 col-xs-12">
-						<h3 class="about-name">ABOUT ME<!-- <div class="line">
+						<h3 class="about-name text-center">ABOUT ME<!-- <div class="line">
 						</div> --></h3>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+					<div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
 						<p class="strong">Hi, i’m Paul Lapkin, Experience Crafter from Canada. </p>
 						<p>
 							Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </br></br>
@@ -66,7 +61,7 @@
 						<p class="button-header button-hire">HIRE ME!</p>
 						<p class="button-header button-cv">DOWNLOAD CV</p>
 					</div>
-					<div class="col-lg-offset-2 col-lg-5 col-md-offset-2 col-md-5 col-sm-12 col-xs-12">
+					<div class="col-lg-offset-2 col-lg-5 col-md-offset-2 col-md-5 col-sm-6 col-xs-12">
 						<img class="img-responsive about-img" src="img/about-image.png">
 						<ul>
 							<li><i class="fa fa-facebook fa-lg"></i></li>
@@ -79,6 +74,25 @@
 			</div>
 		</section>
 		<section id="image">
+			<div id="carousel-example" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="item active">
+						<img class="img-responsive about-img" src="img/big-image-2.jpg">
+					</div>
+					<div class="item">
+						<img class="img-responsive about-img" src="img/big-image-2.jpg">
+					</div>
+					<div class="item">
+						<img class="img-responsive about-img" src="img/big-image-2.jpg">
+					</div>
+				</div>
+				<a class="left carousel-control" href="#carousel-example" data-slide="prev">
+					<i class="fa fa-angle-left fa-5x"></i>
+				</a>
+				<a class="right carousel-control" href="#carousel-example" data-slide="next">
+					<i class="fa fa-angle-right fa-5x"></i>
+				</a>
+			</div>
 		</section>
 		<section id="portfolio">
 			<div class="container">
@@ -88,7 +102,7 @@
 					</div>
 				</div>
 				<div class="row portfolio-list">
-					<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+					<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
 						<ul>
 							<li>Fashion</li>
 							<li>Personal</li>
@@ -98,7 +112,7 @@
 							<li>Nude</li>
 						</ul>
 					</div>
-					<div class="col-lg-9 col-md-9 col-sm-6 col-xs-12">
+					<div class="col-lg-9 col-md-9 col-sm-8 col-xs-9">
 						<div class="" id="my-gallery-container">
 							<div class="item" data-order="0">
 								<img class="img-responsive" src="img/portfolio-1-image.jpg">
@@ -126,7 +140,7 @@
 		<section id="skill">
 			<div class="container">
 				<div class="row skill-list">
-					<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 						<h3 class="skill-name">MY WORK SKILL</h3>
 						<ul>
 							<li>Fashion</li>
@@ -135,13 +149,47 @@
 							<li>Wedding</li>
 						</ul>
 					</div>
-					<div class="col-lg-offset-1 col-lg-8 col-lg-offset-1 col-md-8 col-sm-6 col-xs-12">
+					<div class="col-lg-offset-1 col-lg-8 col-md-offset-1 col-md-8 col-sm-9 col-xs-12">
 						<img class="img-responsive" src="img/skill-image.png">
 					</div>
 				</div>
 			</div>
 		</section>
-		
+		<section id="contact">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<h3 class="contact-name text-center">SAY HELLO</h3>
+						<h4 class="contact-text text-center"">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut</h4>
+					</div>
+				</div>
+				<form>
+					<div class="row">
+						<div class="col-lg-offset-3 col-lg-3 col-md-offset-3 col-md-3 col-sm-12 col-xs-12 col-centered form">
+							<input type="text" class="field" placeholder="E-mail" />
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 col-centered form">
+						    <input type="email" class="field" placeholder="Subject" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-12 col-xs-12 col-centered form">
+						    <textarea id="message" class="field" placeholder="Wiadomość"></textarea>
+						    <input id="submit" type="submit" value="SEND MESSAGE">
+						</div>
+					</div>
+				</form>
+			</div>
+		</section>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<p class="text-center">Copyright: Saim, All Rights Reserved.</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 
 
@@ -152,6 +200,7 @@
 	    <script src="js/bootstrap.min.js"></script>
 	    <script src="https://cdn.jsdelivr.net/jquery.typeit/4.3.0/typeit.min.js"></script>
 	    <script src="js/mp.mansory.min.js"></script>
+	    <script src="js/pushy.min.js"></script>
 	    <script src="js/main.js"></script>
 	  	<script>  
 			$("#my-gallery-container").mpmansory({
@@ -160,7 +209,7 @@
 					lg: 4,
 					md: 4,
 					sm: 6,
-					xs: 12
+					xs: 6
 				},
 				distributeBy: {
 					attr: 'data-order',
